--- a/APPVIEW/Views/Account/AccountBlockedAll.cshtml
+++ b/APPVIEW/Views/Account/AccountBlockedAll.cshtml
@@ -25,33 +25,31 @@
     <div class="card-header">
         <h5 class="card-title">Account</h5>
     </div>
-    <div class="card-header row">
-        <div class="col-md-3">
-            <select id="FilterTransaction" class="form-select text-capitalize">
-                <option value=""> Select Status </option>
-                <option value="Blocked" class="text-capitalize">Blocked</option>
-                <option value="Active" class="text-capitalize">Active</option>
-                <option value="Inactive" class="text-capitalize">Inactive</option>
-            </select>
-        </div>
-        <div class="col-md-3">
-            <select id="UserRole" class="form-select text-capitalize">
-                <option value=""> Select Role </option>
-                <option value="Admin">Admin</option>
-                <option value="Author">Author</option>
-                <option value="Editor">Editor</option>
-                <option value="Maintainer">Maintainer</option>
-                <option value="Subscriber">Subscriber</option>
-            </select>
-        </div>
-        <div class="col-md-3">
-            <div id="DataTables_Table_0_filter" class="dataTables_filter">
-                <label><input type="search" class="form-control" placeholder="Search.." aria-controls="DataTables_Table_0"></label>
+    <form asp-action="getlist">
+        <div class="card-header row">
+            <div class="col-md-3">
+                <select id="UserRole" class="form-select text-capitalize" name="role">
+                    <option value=""> Chọn quyền </option>
+                    @foreach (var item in ViewBag.Roles)
+                    {
+                        <option value="@item.id">@item.name</option>
+                    }
+
+                </select>
+            </div>
+            <div class="col-md-3">
+                <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                    <label><input type="search" class="form-control" placeholder="Search.." aria-controls="DataTables_Table_0" name="tk" /></label>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                    <label><button class="btn btn-success mb-3" type="submit">Tìm kiếm</button></label>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
     <div class="card-body">
-        <a class="btn btn-success mb-3" asp-controller="Account" asp-action="Create">Create New</a>
         @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"] as string))
         {
             <div class="alert alert-warning alert-dismissible" role="alert">
@@ -72,14 +70,14 @@
                 <thead>
                     <tr>
                         <th>STT</th>
-                        <th>Name</th>
-                        <th>Email Address</th>
-                        <th>Role</th>
-                        <th>Avatar</th>
-                        <th>Create Date</th>
-                        <th>Update Date</th>
-                        <th>Status</th>
-                        <th>Actions</th>
+                        <th>Tên</th>
+                        <th>Email </th>
+                        <th>Quyền</th>
+                        <th>Ảnh đại diện</th>
+                        <th>Ngày tạo</th>
+                        <th>Ngày cập nhật</th>
+                        <th>Trạng thái</th>
+                        <th>Hành Động</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -121,7 +119,7 @@
                                         DateTime createDate = item.Create_date;
                                         string formattedDate = createDate != DateTime.MinValue
                                         ? createDate.ToString("dd/MM/yyyy")
-                                        : "Not changed";
+                                        : "Chưa thay đổi";
                                     }
                                     @formattedDate
                                 </td>
@@ -130,22 +128,22 @@
                                         DateTime updatedDate = item.Update_date;
                                         string formattedUpdateDate = updatedDate != DateTime.MinValue
                                         ? updatedDate.ToString("dd/MM/yyyy")
-                                        : "Not changed";
+                                        : "Chưa thay đổi";
                                     }
                                     @formattedUpdateDate
                                 </td>
                                 <td>
                                     @if (item.Status == 1)
                                     {
-                                        <span class="badge bg-label-success rounded-pill">Active</span>
+                                        <span class="badge bg-label-success rounded-pill">Hoạt động</span>
                                     }
                                     else if (item.Status == 0)
                                     {
-                                        <span class="badge bg-label-warning rounded-pill">InActive</span>
+                                        <span class="badge bg-label-warning rounded-pill">Chưa kích hoạt</span>
                                     }
                                     else if (item.Status == 2)
                                     {
-                                        <span class="badge rounded-pill bg-label-danger">Blocked</span>
+                                        <span class="badge rounded-pill bg-label-danger">Đã khóa</span>
                                     }
                                 </td>
                                 <td>
@@ -156,15 +154,15 @@
                                         <div class="dropdown-menu dropdown-menu-end m-0">
                                             <a href="app-user-view-account.html" class="dropdown-item">
                                                 <i class="mdi mdi-eye-outline me-2"></i>
-                                                <span>View</span>
+                                                <span>Xem</span>
                                             </a>
                                             <a href="@Url.Action("Edit", new { id = item.Id })" class="dropdown-item">
                                                 <i class="mdi mdi-pencil-outline me-2"></i>
-                                                <span>Edit</span>
+                                                <span>Sửa</span>
                                             </a>
                                             <a href="@Url.Action("Delete", new { id = item.Id })" class="dropdown-item delete-record">
                                                 <i class="mdi mdi-account-reactivate"></i>
-                                                <span>Reactive</span>
+                                                <span>Kích hoạt lại</span>
                                             </a>
                                         </div>
                                     </div>
@@ -175,7 +173,7 @@
                     else
                     {
                         <tr>
-                            <td colspan="10" class="text-center">No Data.</td>
+                            <td colspan="10" class="text-center">Không có dữ liệu.</td>
                         </tr>
                     }
                 </tbody>
