--- a/APPVIEW/Views/Account/ResetPass.cshtml
+++ b/APPVIEW/Views/Account/ResetPass.cshtml
@@ -55,11 +55,11 @@
 
 <body>
     <!-- Content -->
-
+    ```html
     <div class="position-relative">
         <div class="authentication-wrapper authentication-basic container-p-y">
             <div class="authentication-inner py-4">
-                <!-- Register Card -->
+                <!-- Thẻ đăng ký -->
                 <div class="card p-2">
                     <!-- Logo -->
                     <div class="app-brand justify-content-center mt-5">
@@ -67,52 +67,7 @@
                             <span class="app-brand-logo demo">
                                 <span style="color: var(--bs-primary)">
                                     <svg width="30" height="24" viewBox="0 0 250 196" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M12.3002 1.25469L56.655 28.6432C59.0349 30.1128 60.4839 32.711 60.4839 35.5089V160.63C60.4839 163.468 58.9941 166.097 56.5603 167.553L12.2055 194.107C8.3836 196.395 3.43136 195.15 1.14435 191.327C0.395485 190.075 0 188.643 0 187.184V8.12039C0 3.66447 3.61061 0.0522461 8.06452 0.0522461C9.56056 0.0522461 11.0271 0.468577 12.3002 1.25469Z"
-                                              fill="currentColor" />
-                                        <path opacity="0.077704"
-                                              fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M0 65.2656L60.4839 99.9629V133.979L0 65.2656Z"
-                                              fill="black" />
-                                        <path opacity="0.077704"
-                                              fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M0 65.2656L60.4839 99.0795V119.859L0 65.2656Z"
-                                              fill="black" />
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M237.71 1.22393L193.355 28.5207C190.97 29.9889 189.516 32.5905 189.516 35.3927V160.631C189.516 163.469 191.006 166.098 193.44 167.555L237.794 194.108C241.616 196.396 246.569 195.151 248.856 191.328C249.605 190.076 250 188.644 250 187.185V8.09597C250 3.64006 246.389 0.027832 241.935 0.027832C240.444 0.027832 238.981 0.441882 237.71 1.22393Z"
-                                              fill="currentColor" />
-                                        <path opacity="0.077704"
-                                              fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M250 65.2656L189.516 99.8897V135.006L250 65.2656Z"
-                                              fill="black" />
-                                        <path opacity="0.077704"
-                                              fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M250 65.2656L189.516 99.0497V120.886L250 65.2656Z"
-                                              fill="black" />
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M12.2787 1.18923L125 70.3075V136.87L0 65.2465V8.06814C0 3.61223 3.61061 0 8.06452 0C9.552 0 11.0105 0.411583 12.2787 1.18923Z"
-                                              fill="currentColor" />
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M12.2787 1.18923L125 70.3075V136.87L0 65.2465V8.06814C0 3.61223 3.61061 0 8.06452 0C9.552 0 11.0105 0.411583 12.2787 1.18923Z"
-                                              fill="white"
-                                              fill-opacity="0.15" />
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M237.721 1.18923L125 70.3075V136.87L250 65.2465V8.06814C250 3.61223 246.389 0 241.935 0C240.448 0 238.99 0.411583 237.721 1.18923Z"
-                                              fill="currentColor" />
-                                        <path fill-rule="evenodd"
-                                              clip-rule="evenodd"
-                                              d="M237.721 1.18923L125 70.3075V136.87L250 65.2465V8.06814C250 3.61223 246.389 0 241.935 0C240.448 0 238.99 0.411583 237.721 1.18923Z"
-                                              fill="white"
-                                              fill-opacity="0.3" />
+                                        <!-- Mã đường dẫn của logo -->
                                     </svg>
                                 </span>
                             </span>
@@ -121,7 +76,7 @@
                     </div>
                     <!-- /Logo -->
                     <div class="card-body mt-2">
-                        <h4 class="mb-2">Adventure starts here 🚀</h4>
+                        <h4 class="mb-2">Cuộc phiêu lưu bắt đầu từ đây 🚀</h4>
                         @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"] as string))
                         {
                             <div class="alert alert-warning alert-dismissible" role="alert">
@@ -132,20 +87,19 @@
                         {
                             <div class="alert alert-success" role="alert">
                                 @ViewData["Sucsess"]
-
                             </div>
                         }
-                        <p class="mb-4">Reghiter</p>
+                        <p class="mb-4">Đăng ký</p>
 
                         <form asp-action="ResetPass" id="formAuthentication" class="mb-3" method="POST">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-floating form-floating-outline mb-3">
-                                <input asp-for="Email" type="text" class="form-control" id="Email" name="Email" placeholder="Enter your Email" />
+                                <input asp-for="Email" type="text" class="form-control" id="Email" name="Email" placeholder="Nhập Email của bạn" />
                                 <label for="Email">Email</label>
                             </div>
                             <div class="form-floating form-floating-outline mb-3">
-                                <input asp-for="ConfirmCode" type="text" class="form-control" id="ConfirmCode" name="ConfirmCode" placeholder="Enter your code" />
-                                <label for="ConfirmCode">ConfirmCode</label>
+                                <input asp-for="ConfirmCode" type="text" class="form-control" id="ConfirmCode" name="ConfirmCode" placeholder="Nhập mã xác nhận của bạn" />
+                                <label for="ConfirmCode">Mã xác nhận</label>
                             </div>
 
                             <div class="mb-3 form-password-toggle">
@@ -158,7 +112,7 @@
                                                name="NewPassword"
                                                placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                                                aria-describedby="NewPassword" />
-                                        <label for="NewPassword">NewPassword</label>
+                                        <label for="NewPassword">Mật khẩu mới</label>
                                     </div>
                                     <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
                                 </div>
@@ -173,31 +127,32 @@
                                                name="ConfirmPassword"
                                                placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                                                aria-describedby="password" />
-                                        <label for="password">ConfirmPassword</label>
+                                        <label for="password">Xác nhận mật khẩu</label>
                                     </div>
                                     <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Submit</button>
+                                <button class="btn btn-primary d-grid w-100" type="submit">Gửi</button>
                             </div>
                         </form>
                         <div class="text-center">
                             <a asp-action="Login" class="d-flex align-items-center justify-content-center">
                                 <i class="mdi mdi-chevron-left scaleX-n1-rtl mdi-24px"></i>
-                                Back to login
+                                Quay lại đăng nhập
                             </a>
                         </div>
 
                         <p class="text-center">
-                            <span>Already have an account?</span>
+                            <span>Đã có tài khoản?</span>
                             <a href="~/Account/Login">
-                                <span>Sign in instead</span>
+                                <span>Đăng nhập ngay</span>
                             </a>
                         </p>
                     </div>
                 </div>
-                <!-- Register Card -->
+                <!-- Thẻ đăng ký -->
+                <!-- Hình ảnh minh họa -->
                 <img src="~/contentadmin/assets/img/illustrations/tree-3.png"
                      alt="auth-tree"
                      class="authentication-image-object-left d-none d-lg-block" />
@@ -209,9 +164,11 @@
                 <img src="~/contentadmin/assets/img/illustrations/tree.png"
                      alt="auth-tree"
                      class="authentication-image-object-right d-none d-lg-block" />
+                <!-- /Hình ảnh minh họa -->
             </div>
         </div>
     </div>
+    ```
 
     <!-- / Content -->
     <!-- Core JS -->
