--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -153,18 +153,18 @@
                                 {
 
                                     <li>
-                                        <a hidden href="#">
+                                        <a  href="#">
                                             Total
                                             <span>
-                                                <input hidden readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(totalll+ViewBag.fee)" id="tShip" /> VND
+                                                <input readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(totalll+ViewBag.fee)" id="tShip" /> VND
                                             </span>
                                         </a>
-                                        <a   href="#">
+                                      @*   <a   href="#">
                                             Total
                                             <span>
                                                 @(totalll + ViewBag.fee.ToString("C0", new CultureInfo("vi-VN")))
                                             </span>
-                                        </a>
+                                        </a> *@
                                     </li>
 
 
@@ -173,13 +173,13 @@
                                 {
                                     
                                     <li>
-                                        <a hidden href="#">
+                                        <a  href="#">
                                             Total
                                             <span>
                                                 @(Convert.ToDecimal(ViewBag.TT) - Convert.ToDecimal(ViewBag.DiscountAmount) + Convert.ToDecimal(ViewBag.fee).ToString("C0", new CultureInfo("vi-VN")))
                                             </span>
                                         </a>
-                                        <a hidden href="#">Total <span> <input readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT -  ViewBag.DiscountAmount+ViewBag.fee)" id="tShip" /> VND</span></a>
+                                        <a  href="#">Total <span> <input readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT -  ViewBag.DiscountAmount+ViewBag.fee)" id="tShip" /> VND</span></a>
                                     </li>
 
                                 }
@@ -187,13 +187,13 @@
                             else
                             {
                                <li>
-                                    <a href="#">
+                                    @* <a href="#">
                                         Total
                                         <span>
                                             @((Convert.ToDecimal(ViewBag.TT) + Convert.ToDecimal(ViewBag.fee)).ToString("C0", new CultureInfo("vi-VN")))
                                         </span>
-                                    </a>
-                                    <a hidden href="#">Total <span> <input readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT+ViewBag.fee)" id="tShip" /> VND</span></a>
+                                    </a> *@
+                                    <a  href="#">Total <span> <input readonly style="height:30px; width:80px; border: none; outline: none; background-color:#e8f0f2;" value="@(ViewBag.TT+ViewBag.fee)" id="tShip" /> VND</span></a>
                                     </li>
 
                             }
